# Skalp2026

./: .gitignore  .rubocop.yml  .rubocop_todo.yml  .yardopts  CMakeLists.txt  Clean_IFC.rb  Gemfile  Old insection edit tool.rb  Rakefile  Security_check.rb  Skalp_.rb  Skalp_debug.rb  Skalp_hatchpatterns_DEVELOP.rb  Skalp_hatchpatterns_INSPECT.rb  Skalp_polygon3D.rb  Skalp_rubywindow.rb  Skalp_translator.rbs  Spoofing.rb  analyze_crashes.rb  benchmark_preview.rb  crash_report.txt  embed.yml  extension.yml  mac_test.rb  my_test.rb  open3.rb  php scripts.php  restore_prod.sh  setup_dev_link.sh  skalp_mac_test.rb  support.txt  test.rb
Custom_plugins/: edit_component_description.rb
Resources/: translations.xlsx
SOURCE/: Skalp_Skalp2026.rb  Skalp_Skalp2026_installer.rb  debug_api.rb  skalp.rb
SOURCE/skalp/: Skalp.lic  (+21 more)
SUEX_Skalp/: SkalpC_2.7.sln  Skalp_compile_2019.bat  Skalp_compile_2019_jeroen.bat  Skalp_compile_2021.bat  Skalp_compile_2021_jeroen.bat
Skalp_Skalp_installer/: Skalp_Skalp_installer.rb
Skalp_external_application/: Skalp_external_application.vcxproj  Skalp_external_application.vcxproj.filters  get_exploded_entities.cpp  setup_hiddenline_style.cpp  skalp_convert.cpp  skalp_convert.h  sketchup.cpp
_buildscript/: BUILDSCRIPT.rb  Skalp_compile_2017.bat  Skalp_compile_2018.bat  Text_to_base64.rb  buildscript_methods.rb  buildscript_xcode.rb  make_dev_licenses.sh  manual_licgen.rb  manual_licgen.sh  rb2rbe.sh  rb2rbe_no_lic.sh  rb2rbe_no_lic_rails.sh  rb2rbe_skalp_lic_error_catching.sh  rb2rbe_skalp_version_error_catching.sh  rbe_test.data  syncserver.sh  test.rb  test_translation.rb  testfile
_src/: LICENSE.txt  Skalp_UI.rb  Skalp_box_section.rb  Skalp_box_section_overlay.rb  Skalp_box_section_tool.rb  Skalp_dashed_lines.rb  Skalp_debugger_SkalpC.rb  Skalp_export_import_materials.rb  Skalp_hatch_class.rb  Skalp_hatch_dialog.rb  Skalp_hatchpatterns_main.rb  Skalp_hiddenlines.rb  Skalp_html_inputbox.rb  Skalp_lib2.rb  Skalp_license.rb  Skalp_loader.rb  Skalp_log.txt  Skalp_material_dialog.rb  Skalp_materials.rb  Skalp_memory_attributes.rb  Skalp_model.rb  Skalp_observers.rb  Skalp_page.rb  Skalp_pages_undoredo.rb  Skalp_section.rb  Skalp_section2D.rb  Skalp_section_dialog.rb  Skalp_style_settings.rb  Skalp_tile_size.rb
_src (met overlays)/: Skalp.rb  Skalp_cad_converter.rb  Skalp_control_center.rb  Skalp_converter.rb  Skalp_debugger_SkalpC.rb  Skalp_hatch_class.rb  Skalp_hatch_dialog.rb  Skalp_hatch_lib.rb  Skalp_hatchdefinition_class.rb  Skalp_hiddenlines.rb  Skalp_info.rb  Skalp_lib2.rb  Skalp_lic.rb  Skalp_material_dialog.rb  Skalp_memory_attributes.rb  Skalp_preferences.rb  Skalp_start.rb  Skalp_style_settings.rb  Skalp_translator.rb  Skalp_update.rb  Skalp_white_mode.rb
ce_src_app/: Skalp_external_application.sln  create_layer_materials.cpp  get_exploded_entities.cpp  main.cpp  model_style.cpp  setup_hiddenline_style.cpp  setup_reversed_scene.cpp  skalp_convert.cpp  skalp_convert.h  skalp_layout_connection.cpp  skalp_layout_connection.h  sketchup.cpp  sketchup.h
ce_src_skalpc/: SkalpC.vcxproj.filters
dev_license_files/: Guy.lic  Jeroen.lic
dev_trial_license_files/: Guy.lic_edu  Guy.lic_full  Guy.lic_reseller  Guy.lic_trial  Guy.lic_trial_expired  Guy.lic_trial_full_expired  Jeroen.lic_edu  Jeroen.lic_full  Jeroen.lic_reseller  Jeroen.lic_trial  Jeroen.lic_trial_expired  Jeroen.lic_trial_full_expired
licenses/: EULA.html  Q_A.txt  SketchUp EULA.rtf
redesign documentation/: Skalp_2026_UI_en_Scene_Management_Eindconclusies.docx  skalp_ui_style_guide.md
rgloader/: loader.rb
tasks/: auth.rake  build.rake  compile.rake  doctor.rake  embed.rake  encrypt.rake  install.rake  lint.rake  release.rake  secure_build.rake  sketchup.rake  test.rake  user_test.rake  version.rake  web.rake
tests/: README.md  undo_research.rb  verify_section_line_color.rb
tools/: bump_version.rb  debug-sketchup.rb  debug_impl.rb  debug_loader.rb  encrypt_test.rb  encryptor.rb  gen_release_notes.rb  verify_build.rb
(+1435 files in other folders)
